change theme from everforest to everblush

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,28 +1,7 @@
 window-padding-x = 4
 window-padding-y = 2
 
-background = #272E33
-foreground = #D3C6AA
-cursor-color = #D3C6AA
-selection-foreground = #272E33
-selection-background = #D3C6AA
-
-palette = 0=#7A8478
-palette = 1=#E67E80
-palette = 2=#A7C080
-palette = 3=#DBBC7F
-palette = 4=#7FBBB3
-palette = 5=#D699B6
-palette = 6=#83C092
-palette = 7=#D3C6AA
-palette = 8=#859289
-palette = 9=#E67E80
-palette = 10=#A7C080
-palette = 11=#DBBC7F
-palette = 12=#7FBBB3
-palette = 13=#D699B6
-palette = 14=#83C092
-palette = 15=#D3C6AA
+theme = Everblush
 
 font-family = "FiraCode Nerd Font Mono"
 font-size = 13
