--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ exec-once = lxsession &
 exec-once = hyprctl setcursor Adwaita 23 &
 exec-once = blueman-tray &
 exec-once = swww-daemon &
-exec-once = swww img $HOME/wallpapers/26.jpg &
+exec-once = swww img $HOME/wallpapers/11.jpg &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -54,7 +54,7 @@ exec-once = swww img $HOME/wallpapers/26.jpg &
 
 env = XCURSOR_SIZE,23
 env = HYPRCURSOR_SIZE,23
-env = GTK_THEME,Everforest-Dark-Compact
+env = GTK_THEME,Ever-Blush
 env = __GL_GSYNC_ALLOWED,1
 env = __GL_VRR_ALLOWED,1
 
@@ -66,24 +66,24 @@ general {
     gaps_in = 5
     gaps_out = 5
     border_size = 1
-    col.active_border = rgb(7fbbb3)
-    col.inactive_border = rgb(7a8478)
+    col.active_border = rgb(67b0e8)
+    col.inactive_border = rgb(6cbfbf)
     resize_on_border = true
     allow_tearing = false
     layout = dwindle
 }
 
 group {
-    col.border_active = rgb(7fbbb3)
-    col.border_inactive = rgb(7a8478)
+    col.border_active = rgb(67b0e8)
+    col.border_inactive = rgb(6cbfbf)
     groupbar {
         font_family = [[FiraMono Nerd Font Mono]]
         font_size = 8
         height = 10
         indicator_height = 1
         rounding = 0
-        col.active = rgb(7fbbb3)
-        col.inactive = rgb(7a8478)
+        col.active = rgb(67b0e8)
+        col.inactive = rgb(6cbfbf)
     }
 }
 
@@ -282,7 +282,7 @@ bind = , XF86TouchpadToggle, exec, ~/.local/bin/toggle-touchpad.sh
 bindl = , XF86Sleep, exec, $hibernateCmd
 
 # Session Management
-bind = ALT SHIFT, L, exec, hyprlock
+bind = $mainMod ALT, L, exec, hyprlock
 bind = $mainMod SHIFT, Q, exec, $HOME/.local/bin/powermenu.sh
 
 ##############################
