--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ animations {
 }
 
 background {
-    path = $HOME/wallpapers/26.jpg
+    path = $HOME/wallpapers/11.jpg
     color = rgb(0c0e14)
     blur_passes = 2
     blur_size = 2
@@ -24,11 +24,11 @@ input-field {
     outline_thickness = 0 
     outer_size = 0
 
-    outer_color = rgb(1E2326)
-    inner_color = rgba(1E232633)
-    check_color = rgba(DBBC7F33)
-    fail_color = rgba(E67E8033)
-    font_color = rgb(D3C6AA)
+    outer_color = rgb(232a2d)
+    inner_color = rgba(232a2d55)
+    check_color = rgba(e5c76b55)
+    fail_color = rgba(e5747455)
+    font_color = rgb(b3b9b8)
 
     fade_on_empty = false
     rounding = 0
@@ -48,7 +48,7 @@ label {
     text = cmd[update:1000] echo "$(date '+%H:%M')"
     font_family = $font
     font_size = 80
-    color = rgb(D3C6AA)
+    color = rgb(b3b9b8)
 
     position = -80, -50
     halign = right
