--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -13,25 +13,17 @@ set -g status "on"
 set -g default-terminal "xterm-256color"
 
 # theme
-bg="#1E2326"
-bg_light="#272E33"
-fg="#D3C6AA"
-yellow="#DBBC7F"
-darkblue="#3A94C5"
-cyan="#83C092"
-green="#A7C080"
-orange="#E69875"
-violet="#DF69BA"
-magenta="#D699B6"
-blue="#7FBBB3"
-red="#E67E80"
-grey0="#7a8478"
-grey1="#859289"
+bg="#232a2d"
+bg_dark="#141b1e"
+fg="#dadada"
+green="#8ccf7e"
+blue="#67b0e8"
+grey0="#b3b9b8"
 
 set -g status-left-length 100
 set -g status-style "fg=${fg},bg=${bg}"
 set -g status-left "#[fg=${blue},bg=${bg},bold] #{?pane_in_mode, , }#S #[fg=${fg},nobold]|"
-set -g window-status-current-format "#[fg=${blue},bg=${bg_light}]  #[underscore]#I:#W#[nounderscore] "
+set -g window-status-current-format "#[fg=${blue},bg=${bg_dark}]  #[underscore]#I:#W#[nounderscore] "
 set -g window-status-format "#[fg=${fg},bg=${bg}]#{?window_last_flag, 󰁯,} #I:#W "
 set -g status-right ""
 set -g message-style "fg=${bg},bg=${blue}"
