--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ $hibernateCmd = $HOME/.local/bin/hibernate.sh
 #################
 
 exec-once = dbus-update-activation-environment --systemd --all
-exec-once = hypridle &j
+exec-once = hypridle &
 exec-once = $HOME/.local/bin/waybar.sh &
 exec-once = wl-paste --type text --watch cliphist store &
 exec-once = wl-paste --type image --watch cliphist store &
@@ -46,7 +46,7 @@ exec-once = lxsession &
 exec-once = hyprctl setcursor Adwaita 23 &
 exec-once = blueman-tray &
 exec-once = swww-daemon &
-exec-once = swww img $HOME/wallpapers/11.jpg &
+exec-once = swww img $HOME/wallpapers/15.png &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
