--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ animations {
 }
 
 background {
-    path = $HOME/wallpapers/11.jpg
+    path = $HOME/wallpapers/15.png
     color = rgb(0c0e14)
     blur_passes = 2
     blur_size = 2
@@ -25,7 +25,7 @@ input-field {
     outer_size = 0
 
     outer_color = rgb(232a2d)
-    inner_color = rgba(232a2d55)
+    inner_color = rgba(232a2d33)
     check_color = rgba(e5c76b55)
     fail_color = rgba(e5747455)
     font_color = rgb(b3b9b8)
