Nothing is better than tokyonight

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -54,7 +54,7 @@ exec-once = swww img $HOME/wallpapers/15.png &
 
 env = XCURSOR_SIZE,23
 env = HYPRCURSOR_SIZE,23
-env = GTK_THEME,Ever-Blush
+env = GTK_THEME,Tokyonight-Dark-Compact
 env = __GL_GSYNC_ALLOWED,1
 env = __GL_VRR_ALLOWED,1
 
@@ -66,24 +66,24 @@ general {
     gaps_in = 5
     gaps_out = 5
     border_size = 1
-    col.active_border = rgb(67b0e8)
-    col.inactive_border = rgb(6cbfbf)
+    col.active_border = rgb(7aa2f7)
+    col.inactive_border = rgb(3d59a1)
     resize_on_border = true
     allow_tearing = false
     layout = dwindle
 }
 
 group {
-    col.border_active = rgb(67b0e8)
-    col.border_inactive = rgb(6cbfbf)
+    col.border_active = rgb(7aa2f7)
+    col.border_inactive = rgb(3d59a1)
     groupbar {
         font_family = [[FiraMono Nerd Font Mono]]
         font_size = 8
         height = 10
         indicator_height = 1
         rounding = 0
-        col.active = rgb(67b0e8)
-        col.inactive = rgb(6cbfbf)
+        col.active = rgb(7aa2f7)
+        col.inactive = rgb(3d59a1)
     }
 }
 
