--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -13,17 +13,17 @@ set -g status "on"
 set -g default-terminal "xterm-256color"
 
 # theme
-bg="#232a2d"
-bg_dark="#141b1e"
-fg="#dadada"
-green="#8ccf7e"
-blue="#67b0e8"
-grey0="#b3b9b8"
+bg="#16161E"
+bg_light="#1A1B26"
+fg="#C0CAF5"
+green="#73DACA"
+blue="#7AA2F7"
+grey0="#545c7e"
 
 set -g status-left-length 100
 set -g status-style "fg=${fg},bg=${bg}"
 set -g status-left "#[fg=${blue},bg=${bg},bold] #{?pane_in_mode, , }#S #[fg=${fg},nobold]|"
-set -g window-status-current-format "#[fg=${blue},bg=${bg_dark}]  #[underscore]#I:#W#[nounderscore] "
+set -g window-status-current-format "#[fg=${blue},bg=${bg_light}]  #[underscore]#I:#W#[nounderscore] "
 set -g window-status-format "#[fg=${fg},bg=${bg}]#{?window_last_flag, 󰁯,} #I:#W "
 set -g status-right ""
 set -g message-style "fg=${bg},bg=${blue}"
