--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,7 +1,7 @@
 window-padding-x = 4
 window-padding-y = 2
 
-theme = Everblush
+theme = tokyonight_night
 
 font-family = "FiraCode Nerd Font Mono"
 font-size = 13
