--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ animations {
 }
 
 background {
-    path = $HOME/wallpapers/15.png
+    path = $HOME/wallpapers/29.jpg
     color = rgb(0c0e14)
     blur_passes = 2
     blur_size = 2
