--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ exec-once = lxsession &
 exec-once = hyprctl setcursor Adwaita 23 &
 exec-once = blueman-tray &
 exec-once = swww-daemon &
-exec-once = swww img $HOME/wallpapers/15.png &
+exec-once = swww img $HOME/wallpapers/29.jpg &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
