update dotfiles to hyprland 0.52

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -294,8 +294,8 @@ windowrule = float, class:xdg-desktop-portal-gtk
 windowrule = tile, class:^CiscoCollabHost$
 windowrule = workspace 10, class:^CiscoCollabHost$
 windowrule = float, class:galculator
-windowrule = float, class:steam, title=.*Settings.*
-windowrule = fullscreen, class:steam, title=.*Settings.*
+windowrule = float, class:steam, title:.*Settings.*
+windowrule = fullscreen, class:steam, title:.*Settings.*
 
 xwayland {
   force_zero_scaling = true
