Update tmux config

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -19,17 +19,20 @@ fg="#C0CAF5"
 green="#73DACA"
 blue="#7AA2F7"
 grey0="#545c7e"
+violet="#9d7cd8"
+magenta="#BB9AF7"
+cyan="#7DCFFF"
 
 set -g status-left-length 100
 set -g status-style "fg=${fg},bg=${bg}"
-set -g status-left "#[fg=${blue},bg=${bg},bold] #{?pane_in_mode, , }#S #[fg=${fg},nobold]|"
-set -g window-status-current-format "#[fg=${blue},bg=${bg_light}]  #[underscore]#I:#W#[nounderscore] "
-set -g window-status-format "#[fg=${fg},bg=${bg}]#{?window_last_flag, 󰁯,} #I:#W "
-set -g status-right ""
+set -g status-left ""
+set -g window-status-current-format "#[fg=${cyan},bg=${bg},bold]  #I:#W#[nounderscore] "
+set -g window-status-format "#[fg=${fg},bg=${bg}]#{?window_last_flag, #[fg=${blue}]󰁯,} #[fg=${fg}]#I:#W "
+set -g status-right "#[fg=${cyan},bg=${bg},bold] #{?pane_in_mode, , }#S"
 set -g message-style "fg=${bg},bg=${blue}"
 set -g mode-style "fg=${bg},bg=${blue}"
 set -g pane-border-style "fg=${grey0}"
-set -g pane-active-border-style "fg=${green}"
+set -g pane-active-border-style "fg=${cyan}"
 set -g popup-border-style "fg=${blue}"
 
 # enable CSI u
@@ -44,12 +47,6 @@ set-option -g prefix C-b
 # automatically renumber windows
 set-option -g renumber-windows on
 
-# split navigation
-bind C-h select-pane -L
-bind C-l select-pane -R
-bind C-j select-pane -U
-bind C-k select-pane -D
-
 # vim keybindings
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
@@ -62,11 +59,23 @@ bind-key @ join-pane -s $.0
 bind-key j run-shell "~/.local/bin/popup_tmux.sh"
 bind-key k run-shell "~/.local/bin/popup_tmux_common.sh"
 
-# resize pane
+# select pane
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
+
+# select window
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
+bind -n M-0 select-window -t 10
 
 # tmux sessionizer in popup
 bind C-f run-shell "tmux popup -E -w 80% -h 80% '~/.local/bin/tmux-sessionizer.sh'"
