--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -10,3 +10,13 @@ font-feature = "-calt, -liga, -dlig"
 
 app-notifications = false
 desktop-notifications = false
+
+keybind = alt+1=unbind
+keybind = alt+2=unbind
+keybind = alt+3=unbind
+keybind = alt+4=unbind
+keybind = alt+5=unbind
+keybind = alt+6=unbind
+keybind = alt+7=unbind
+keybind = alt+8=unbind
+keybind = alt+9=unbind
