Adapt it to single monitor

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitorv2 {
 monitorv2 {
     output = eDP-1
     mode = 1920x1080@144
-    position = 2560x0
+    position = 0x0
     scale = 1.2
     transform = 0
 }
@@ -47,6 +47,7 @@ exec-once = hyprctl setcursor Adwaita 23 &
 exec-once = blueman-tray &
 exec-once = swww-daemon &
 exec-once = swww img $HOME/wallpapers/29.jpg &
+exec-once = kanshi &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -296,6 +297,7 @@ windowrule = workspace 10, class:^CiscoCollabHost$
 windowrule = float, class:galculator
 windowrule = float, class:steam, title:.*Settings.*
 windowrule = fullscreen, class:steam, title:.*Settings.*
+windowrule = float, title:.*Bitwarden.*
 
 xwayland {
   force_zero_scaling = true
