--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -65,6 +65,7 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+# select window
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
 bind -n M-3 select-window -t 3
@@ -74,6 +75,9 @@ bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
+
+# create window
+bind -n M-c new-window
 
 # tmux sessionizer in popup
 bind C-f run-shell "tmux popup -E -w 80% -h 80% '~/.local/bin/tmux-sessionizer.sh'"
