--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -22,13 +22,15 @@ grey0="#545c7e"
 violet="#9d7cd8"
 magenta="#BB9AF7"
 cyan="#7DCFFF"
+orange="#FF9E64"
+yellow="#E0AF68"
 
 set -g status-left-length 100
 set -g status-style "fg=${fg},bg=${bg}"
 set -g status-left ""
-set -g window-status-current-format "#[fg=${cyan},bg=${bg},bold]  #I:#W#[nounderscore] "
-set -g window-status-format "#[fg=${fg},bg=${bg}]#{?window_last_flag, #[fg=${blue}]󰁯,} #[fg=${fg}]#I:#W "
-set -g status-right "#[fg=${cyan},bg=${bg},bold] #{?pane_in_mode, , }#S "
+set -g window-status-current-format "#[fg=${orange},bg=${bg},bold]  #I:#W#[nounderscore] "
+set -g window-status-format "#[fg=${fg},bg=${bg}]#{?window_last_flag, #[fg=${yellow}]󰁯,} #[fg=${fg}]#I:#W "
+set -g status-right "#[fg=${orange},bg=${bg},bold] #{?pane_in_mode, , }#S "
 set -g message-style "fg=${bg},bg=${blue}"
 set -g mode-style "fg=${bg},bg=${blue}"
 set -g pane-border-style "fg=${grey0}"
