switch terminal to foot

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ monitorv2 {
 ### MY PROGRAMS ###
 ###################
 
-$terminal = alacritty
+$terminal = foot
 $fileManager = nautilus
 $menu = pkill rofi || rofi -show drun
 $browser = firefox
